# nd_project

./: .gitignore  Makefile  README.org  design-notes.org  dune-project  front-end-ocaml-intro.org  nd_project.opam  project.org
frontend/: action.ml  app.ml  aux.ml  dune  index.html  intro.ml  main.ml  scratch.ml  test_structures.ml  view.ml
natural_deduction/: calculus.ml  dune  excerpt.ml  natural_deduction.ml  notation.ml  proof.ml  proof_complete.ml  proof_interaction.ml  proof_intf.ml  proof_partial.ml  proof_tactics.ml  proof_tactics.mli  proof_tactics_types.ml  proof_zipper.ml  proving.ml  rule.ml
public/: index.html  styles.css
test/: calculus.ml  calculus_test.ml  dune  ex_proofs.ml  helpers.ml  nd_unit.ml  proof_test.ml  tactics_test.ml  test.ml
